[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "async-pychasing"
version = "0.0.1"
authors = [
    { name = "Tanner B. Corcoran", email = "tannerbcorcoran@gmail.com" },
]
description = "An asynchronous version of [pychasing](https://pypi.org/project/pychasing/) (a wrapper for the https://ballchasing.com API)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp >= 3.5.0",
    "http-prep >= 0.0.6",
    "prepr >= 0.0.6",
    "pychasing >= 0.1.3",
]

[project.urls]
"Homepage" = "https://github.com/tanrbobanr/async-pychasing"